# PySDD

./: .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  pysdd-cli.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml
docs/: Makefile  conf.py  examples.ipynb  index.rst  make.bat
docs/classes/: Fnf.rst  SddManager.rst  SddNode.rst  Vtree.rst  WmcManager.rst
docs/examples/: build_formula.rst  cli_examples.rst  conditioning.rst  model_counting.rst  test.cnf
docs/usage/: cli.rst  contact.rst  installation.rst  package.rst  references.rst
examples/: simple.cnf  test-1.py  test-2.py  test-3.py  test-4.py  test-5.py  wmc-1.py
examples/input/: simple.vtree
notebooks/: examples.ipynb  perm_examples.ipynb
pysdd/: __init__.py  __main__.py  cli.py  compiler_c.pxd  fnf_c.pxd  io.py  io_c.pxd  iterator.py  sdd.pyx  sddapi_c.pxd  util.py  weight_optimization_c.pxd  wmcstochastic.py
pysdd/lib/: .gitignore  README
pysdd/lib/libsdd-2.0/: SConstruct  custom_build.sh  sdd.def  sddapi.h
pysdd/lib/libsdd-2.0/include/: macros.h  sdd.h
pysdd/lib/libsdd-2.0/src/: SConscript  util.c  version.c
pysdd/lib/libsdd-2.0/src/basic/: hash.c  memory.c
pysdd/lib/libsdd-2.0/src/manager/: interface.c
pysdd/lib/libsdd-2.0/src/sdds/: exists_multiple.c  io.c
pysdd/lib/libsdd-2.0/src/vtrees/: compare.c  static.c
pysdd/lib/sdd-2.0/include/: compiler.h  fnf.h  io.h  sddapi.h
pysdd/lib/sdd-2.0/lib/Darwin-arm/: libsdd.dylib
pysdd/lib/sdd-2.0/lib/Windows/: libsdd.lib  sdd.lib
pysdd/lib/sdd-2.0/src/: main.c
pysdd/lib/sdd-2.0/src/fnf/: compiler.c  fnf.c  io.c  utils.c
pysdd/lib/sdd-2.0/src/weight_optimization/: weight_optimizer.c
pysdd/lib/sdd_extra/include/: sddapi_extra.h
pysdd/lib/weight_optimization/include/: lbfgs.h  weight_optimizer.h
pysdd/lib/weight_optimization/src/: lbfgs.c  weight_optimizer.c
pysdd/src/: fnf_wrapper.c  fnf_wrapper.h  io_wrapper.c  io_wrapper.h
tests/: test_iterator.py  test_minimize.py  test_nnf.py  test_psdd.py  test_util.py  test_vtree.py  test_wmcstochastic.py
tests/rsrc/: dimacs1.txt  dimacs1_solution.vtree  loop.psdd  test.cnf  test.cnf.nnf  test.psdd  test.sdd
